# spon_pol_exp

./: .gitignore  Command and readback package definition for  MK1000 and MK2000.doc  Ps_Setup.txt  instec.py  linkam_hotstage.py  oscilloscope.py  oscilloscope_measurement.py  peter_version.vi  pyproject.toml  read_data.ipynb  requirements.txt  results.json  sponexp_app.py  sponexp_ui.py  talk_to_instec.ipynb  talk_to_instec2.ipynb  test.txt  test_rigol.ipynb  test_rigol_read.vi  test_rigol_read_ascii.vi  test_wfg.ipynb  waveform_generator.py
smponpol/: __main__.py  app.py  dataclasses.py  excel_writer.py  experiment.py  instruments.py  main.py  main_qt.py  themes.py  ui.py  ui_qt.py  utils.py
smponpol_old/: app.py  instruments.py  utils.py
