[project]
name = "smponpol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dearpygui>=1.11.1",
    "numpy>=2.1.0",
    "pyqtgraph>=0.13.7",
    "pyside6>=6.8.2.1",
    "pyvisa>=1.14.1",
    "xlsxwriter>=3.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
